force-app/main/default/objects/Fields_Mapping__mdt/fields/Cast_To__c.field-meta.xml
<CustomField>
    <fullName>Cast_To__c</fullName>
    <description>In case we need to cast the source field to a different type, we should pick the type we need to cast to using this field</description>
    <inlineHelpText>In case we need to cast the source field to a different type, we should pick the type we need to cast to using this field</inlineHelpText>
    <label>Cast To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>UseBlankValue</fullName>
            </value>
            <value>
                <fullName>Now</fullName>
            </value>
            <value>
                <fullName>Today</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>