force-app/main/default/objects/Fields_Mapping__mdt/fields/Concatenate_Order__c.field-meta.xml
<CustomField>
    <fullName>Concatenate_Order__c</fullName>
    <description>When we need to concatenate several source fields to one destination field, we&apos;ll set the order of concatenation in this field.</description>
    <label>Concatenate Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>