force-app/main/default/objects/Fields_Mapping__mdt/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <label>Destination Field</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>