force-app/main/default/objects/Fields_Mapping__mdt/fields/Fixed_Value__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Value__c</fullName>
    <description>Fixed value, in case there is no mapping to do.</description>
    <label>Fixed Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>