force-app/main/default/objects/Fields_Mapping__mdt/fields/isRequired__c.field-meta.xml
<CustomField>
    <fullName>isRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for fields that always should populate</description>
    <label>isRequired</label>
    <type>Checkbox</type>
</CustomField>