force-app/main/default/objects/Fields_Mapping__mdt/fields/Keep_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Keep_Current_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Current Value</label>
    <type>Checkbox</type>
</CustomField>