force-app/main/default/objects/Fields_Mapping__mdt/fields/No_Override_With_Null__c.field-meta.xml
<CustomField>
    <fullName>No_Override_With_Null__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Override With Null</label>
    <type>Checkbox</type>
</CustomField>