force-app/main/default/objects/Fields_Mapping__mdt/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>This field is used to determine the process this mapping should be part of.</description>
    <inlineHelpText>This field is used to determine the process this mapping should be part of.</inlineHelpText>
    <label>Process</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>