force-app/main/default/objects/Fields_Mapping__mdt/fields/Text_Before_Field__c.field-meta.xml
<CustomField>
    <fullName>Text_Before_Field__c</fullName>
    <description>If we need to add information before the value of the field we use, we can add this information to this field.</description>
    <label>Text Before Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>