force-app/main/default/objects/Fields_Mapping__mdt/fields/To_Lower_Case__c.field-meta.xml
<CustomField>
    <fullName>To_Lower_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, converts the incoming API value to lowercase before mapping to the destination field.</description>
    <label>To Lower Case?</label>
    <type>Checkbox</type>
</CustomField>