force-app/main/default/objects/Fields_Mapping__mdt/listViews/Lead_Capture_Update_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Capture_Update_Lead</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Source_Field__c</columns>
    <columns>Destination_Field__c</columns>
    <columns>Cast_To__c</columns>
    <columns>Keep_Current_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process__c</field>
        <operation>equals</operation>
        <value>Lead_Capture_Update_Lead</value>
    </filters>
    <label>Lead_Capture_Update_Lead</label>
    <language>en_US</language>
</ListView>