force-app/main/default/objects/Fields_Mapping__mdt/listViews/zqu_Quote_c.listView-meta.xml
<ListView>
    <fullName>zqu_Quote_c</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Source_Field__c</columns>
    <columns>Destination_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process__c</field>
        <operation>contains</operation>
        <value>zqu__Quote__c</value>
    </filters>
    <label>zqu__Quote__c</label>
</ListView>